Revert "fix(material/chips): remove button is too small (#29351)"
This reverts commit d6aed804460d4b75082d7d04e051f2cae9b4f8f6.

--- a/src/material/chips/chip.scss
+++ b/src/material/chips/chip.scss
@@ -538,7 +538,7 @@ $_avatar-trailing-padding: 8px;
     }
 
     &::after {
-      @include token-utils.create-token-slot(background-color, trailing-action-state-layer-color);
+      @include token-utils.create-token-slot(background, trailing-action-state-layer-color);
     }
 
     &:hover::after {
@@ -552,8 +552,7 @@ $_avatar-trailing-padding: 8px;
 
   .mat-mdc-chip-selected .mat-mdc-chip-remove::after,
   .mat-mdc-chip-highlighted .mat-mdc-chip-remove::after {
-    @include token-utils.create-token-slot(background-color,
-      selected-trailing-action-state-layer-color);
+    @include token-utils.create-token-slot(background, selected-trailing-action-state-layer-color);
   }
 }
 
@@ -696,9 +695,7 @@ $_avatar-trailing-padding: 8px;
 
   // Used as a state overlay.
   &::after {
-    $_touch-target-size: 48px;
-    $_ripple-size: 24px;
-    $offset: 3px;
+    $offset: 2px;
     content: '';
     display: block;
     opacity: 0;
@@ -708,11 +705,6 @@ $_avatar-trailing-padding: 8px;
     left: 8px - $offset;
     right: 8px - $offset;
     border-radius: 50%;
-    box-sizing: border-box;
-    padding: calc(($_touch-target-size - $_ripple-size)/2);
-    margin: calc((($_touch-target-size - $_ripple-size)/2) * -1);
-    // stylelint-disable material/no-prefixes
-    background-clip: content-box;
   }
 
   .mat-icon {
